Fixing sideoptions spacing.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -3361,7 +3361,7 @@ body {
     margin-bottom: 32px;
     text-align: center;
     width: 194px;
-    line-height: 1em;
+    line-height: 12px;
 }
 
 .NB-narrow-content .NB-feed-story-sideoptions-container {
